--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,3 +351,11 @@ footer .copyright {
     overflow-x: visible!important;
     position: relative;
 }
+
+#aboutUsSec #mission {
+    display: none;
+}
+
+.tab-content.sm {
+    display: block;
+}
